linux (5.19.11-1~bpo11+1) UNRELEASED; urgency=medium

  * Rebuild for bullseye-backports:
    - Change ABI number to 0.deb11.2

 -- Ben Hutchings <benh@debian.org>  Mon, 03 Oct 2022 02:55:36 +0200

linux (5.19.11-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.19.7
    - [arm*] drm/vc4: hdmi: Rework power up
    - [arm*] drm/vc4: hdmi: Depends on CONFIG_PM
    - crypto: lib - remove unneeded selection of XOR_BLOCKS
    - docs: kerneldoc-preamble: Test xeCJK.sty before loading
    - [arm64] errata: Add Cortex-A510 to the repeat tlbi list
    - Bluetooth: L2CAP: Fix build errors in some archs
    - Revert "PCI/portdrv: Don't disable AER reporting in
      get_port_device_capability()"
    - HID: steam: Prevent NULL pointer dereference in steam_{recv,send}_report
    - media: pvrusb2: fix memory leak in pvr_probe
    - USB: gadget: Fix use-after-free Read in usb_udc_uevent()
    - HID: hidraw: fix memory leak in hidraw_release()
    - net: fix refcount bug in sk_psock_get (2)
    - fbdev: fb_pm2fb: Avoid potential divide by zero error
    - ftrace: Fix NULL pointer dereference in is_ftrace_trampoline when ftrace
      is dead
    - bpf: Don't redirect packets with invalid pkt_len
    - mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse
    - ALSA: usb-audio: Add quirk for LH Labs Geek Out HD Audio 1V5
    - HID: input: fix uclogic tablets
    - HID: add Lenovo Yoga C630 battery quirk
    - [amd64] HID: AMD_SFH: Add a DMI quirk entry for Chromebooks
    - HID: Add Apple Touchbar on T2 Macs in hid_have_special_driver list
    - HID: asus: ROG NKey: Ignore portion of 0x5a report
    - HID: nintendo: fix rumble worker null pointer deref
    - HID: thrustmaster: Add sparco wheel and fix array length
    - [amd64] HID: intel-ish-hid: ipc: Add Meteor Lake PCI device ID
    - ASoC: rt5640: Fix the JD voltage dropping issue
    - rtla: Fix tracer name