@@ -2,6 +2,8 @@ linux (5.19.11-1~bpo11+1) UNRELEASED; urgency=medium
 
   * Rebuild for bullseye-backports:
     - Change ABI number to 0.deb11.2
+    - Disable building rtla, since bullseye's libtraceevent and libtracefs
+      are too old
 
  -- Ben Hutchings <benh@debian.org>  Mon, 03 Oct 2022 02:55:36 +0200
 
